AKS-cloud-demo/demo/anomaly-detection/ad-jobs-deployment-managed.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.allow-anomaly-detection
  namespace: tigera-intrusion-detection
spec:
  tier: allow-tigera
  order: 1
  selector: app == 'anomaly-detection'
  types:
  - Ingress
  - Egress
  egress:
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: projectcalico.org/name == 'tigera-guardian'
      selector: k8s-app == 'tigera-guardian'
      ports:
      - 8080
  - action: Allow
    protocol: UDP
    destination:
      namespaceSelector: projectcalico.org/name == 'kube-system'
      selector: k8s-app == 'kube-dns'
      ports:
      - 53
  - action: Allow
    protocol: UDP
    destination:
      namespaceSelector: projectcalico.org/name == "openshift-dns"
      selector: dns.operator.openshift.io/daemonset-dns == "default"
      ports: [5353]
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tigera.elasticsearch-access-anomaly-detection
  namespace: tigera-guardian
spec:
  tier: allow-tigera
  order: 1
  selector: k8s-app == 'tigera-guardian'
  types:
  - Ingress
  ingress:
  - action: Allow
    destination:
      ports:
      - 8080
    protocol: TCP
    source:
      namespaceSelector: projectcalico.org/name == 'tigera-intrusion-detection'
      selector:  app == 'anomaly-detection'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ad-jobs-deployment
  namespace: tigera-intrusion-detection
  labels:
    app: anomaly-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anomaly-detection
  template:
    metadata:
      labels:
        app: anomaly-detection
    spec:
      imagePullSecrets:
      - name: tigera-pull-secret
      containers:
      - name: ad-jobs
        image: quay.io/tigera/anomaly_detection_jobs:v3.9.0
        resources:
          requests:
            memory: 1G
        securityContext:
          privileged: true
          allowPrivilegeEscalation: true
        volumeMounts:
          - name: host-volume
            mountPath: /home/idsuser/anomaly_detection_jobs/models
          - name: es-certs
            mountPath: /certs/es-ca.pem
            subPath: es-ca.pem
        command: ["python3"]
        args: ["-m", "adj"]
      volumes:
        - name: es-certs
          secret:
            defaultMode: 420
            items:
              - key: tls.crt
                path: es-ca.pem
            secretName: tigera-secure-es-gateway-http-certs-public
        - name: host-volume
          hostPath:
            path: /var/log/calico/anomaly_detection_jobs
